--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <h1>my first website</h1> 
+  <h2>it is my second website</h2>
   <p>it is a beautifull</p> 
+  
 </body>
 </html>
